--- a/resources/sass/object/utility/u-color.scss
+++ b/resources/sass/object/utility/u-color.scss
@@ -1,11 +1,3 @@
-.u-color-yellow {
-  background: $theme_yellow;
-}
-
-.u-color-gray {
-  background: #585F64;
-}
-
 .u-bgc-gray {
-  background: #F2F2F2;
+  background: $theme_super_light_gray;
 }
