--- a/resources/sass/object/component/c-owner-product-list.scss
+++ b/resources/sass/object/component/c-owner-product-list.scss
@@ -1,42 +1,52 @@
 .c-owner-product-list__container {
-  width: 1000px;
-  margin: 100px auto;
   color: $theme_light_black;
+  margin: 100px auto;
   overflow: hidden;
+  width: 1000px;
+  @include mq(){
+    margin: 0 auto $space_5l;
+    width: 95%;
+  }
 }
 
 .c-owner-product-list__head-info {
-  font-size: $font_xl;
-  color: $theme_light_black;
-  padding: $space_s;
   border-bottom: 3px solid $theme_gray_word_bottom;
   box-sizing: border-box;
+  color: $theme_light_black;
+  font-size: $font_xl;
+  padding: $space_s;
+  @include mq(){
+    @include mq() {
+      border-bottom: none;
+      color: $theme_black;
+      font-size: $font_s;
+      padding: $space_m;
+    }
+  }
 }
 .c-owner-product-list__box {
-  width: 1000px;
-  height: 160px;
-  float: left;
-  padding: $space_m $space_2l;
-  cursor: pointer;
   border-bottom: 3px solid $theme_gray_word_bottom;
   cursor: pointer;
+  float: left;
+  height: 160px;
   overflow: hidden;
+  padding: $space_m $space_2l;
+  width: 1000px;
 }
 
 .c-owner-product-list__img {
-  height: 150px;
-  width: 150px;
   object-fit: cover;
-  padding: $space_s 0;
+  height: 150px;
   float: left;
+  padding: $space_s 0;
+  width: 150px;
 }
 .c-owner-product-list__body {
-  width: 500px;
   box-sizing: border-box;
   font-size: $font_m;
-  padding: $space_m 0 $space_m $space_2l;
-  box-sizing: border-box;
   float: left;
+  padding: $space_m 0 $space_m $space_2l;
+  width: 500px;
 }
 .c-owner-product-list__name {
   font-weight: bold;
@@ -44,19 +54,19 @@
 }
 
 .c-owner-product-list__item {
-  margin-bottom: 10px;
   border-bottom: 1px solid $theme_gray_word_bottom;
+  margin-bottom: 10px;
   padding-bottom: 10px;
   width: 350px;
 }
 
 .c-owner-product-list__name:hover {
-  width: 500px;
   color: $theme_yellow;
+  width: 500px;
 }
 .c-owner-product-list__address {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 .c-owner-product-list__expiration {
   color: $theme_gray;
@@ -82,23 +92,23 @@
 }
 
 .c-owner-product-list__btn-container {
+  float: left;
   height: 150px;
   width: 350px;
-  float: left;
 }
 
 .c-owner-product-list__btn {
-  display: block;
-  width: 200px;
-  font-size: 16px;
-  height: $space_4xl;
-  color: $theme_white;
-  font-weight: bold;
-  line-height: $space_4xl;
-  cursor: pointer;
   border: none;
+  color: $theme_white;
+  cursor: pointer;
+  display: block;
+  font-size: $font_s;
+  font-weight: bold;
+  height: $space_4xl;
+  line-height: $space_4xl;
   margin: 60px auto;
   text-align: center;
+  width: 200px;
   &:focus {
     outline: none;
   }
