--- a/resources/sass/object/component/c-product-detail.scss
+++ b/resources/sass/object/component/c-product-detail.scss
@@ -1,33 +1,59 @@
 .c-prodcut-detail__container {
-  margin: $space_5l auto;
-  width: 1000px;
   color: $theme_light_black;
   font-weight: bold;
+  margin: $space_5l auto;
+  width: 1000px;
+  @include mq() {
+    width: 100%;
+  }
 }
 
-.c-product-detail__body {
-  padding: 0 300px;
-  font-size: $font_m;
-  -webkit-font-smoothing: antialiased;
-  position: relative;
+.c-product-detail__img {
+  display: block;
+  height: 500px;
+  object-fit: cover;
+  margin: 0 auto;
+  width: 500px;
+  @include mq() {
+    width: 100%;
+    height: auto;
+  }
 }
+
 .c-product-detail__name {
   font-size: $font_4xl;
   font-weight: bold;
-  text-align: center;
   padding: $space_5l 0 $space_m;
-  text-overflow: ellipsis;
+  text-align: center;
+  @include mq() {
+    font-size: $font_m;
+  }
+}
+
+.c-product-detail__body {
+  font-size: $font_m;
+  padding: 0 300px;
+  position: relative;
+  -webkit-font-smoothing: antialiased;
+  @include mq() {
+    padding: 0 $space_3l;
+    font-size: $font_s;
+  }
 }
 .c-product-detail__item {
-  padding-bottom: $space_m;
-  border-bottom: 2px solid $theme_gray_word_bottom;
+
 }
 .c-product-detail__status {
   color: $theme_white;
   padding: 10px 20px;
   position: absolute;
+  right: 360px;
   top: 0;
-  right: 100px;
+  @include mq() {
+    padding: $space_s $space_m;
+    right: 30px;
+    top: 0px;
+  }
 }
 .c-product-detail__status--normal {
   background: $theme_yellow;
@@ -40,9 +66,12 @@
   padding: $space_2l 0 $space_m;
 }
 .c-product-detail__category {
-  font-size: $font_s;
   color: $theme_gray;
-  padding-left: $space_3l;
+  font-size: $font_s;
+  padding-top: 5px;
+  @include mq() {
+    font-size: $font_sp-m;
+  }
 }
 .c-product-detail__address {
   color: $theme_gray;
@@ -53,6 +82,9 @@
   color: $theme_dark_red;
   font-size: $font_2l;
   font-weight: bold;
+  @include mq() {
+    font-size: $font_l;
+  }
 }
 .c-product-detail__discount-letter {
   color: $theme_dark_red;
@@ -62,45 +94,47 @@
   color: $theme_gray;
   text-decoration: line-through;
 }
-.c-product-detail__img {
-  width: 500px;
-  height: 500px;
-  object-fit: cover;
-  display: block;
-  margin: 0 auto;
-}
 
   .c-product-detail__btn {
-    display: block;
-    width: 300px;
-    font-size: 16px;
-    height: $space_4xl;
+    box-sizing: border-box;
+    border: none;
     color: $theme_white;
+    cursor: pointer;
+    display: block;
+    font-size: $font_s;
     font-weight: bold;
+    height: $space_4xl;
     line-height: $space_4xl;
     margin: $space_2l 0 100px;
-    cursor: pointer;
-    border: none;
     text-align: center;
-    box-sizing: border-box;
+    width: 300px;
+    @include mq() {
+      width: 100%;
+    }
     &:focus {
       outline: none;
     }
   }
 
-    .c-product-detail__btn--normal {
-      background: $theme_yellow;
-    }
-    .c-product-detail__btn--hover-normal {
-      background: $theme_yellow;
-    }
-    .c-product-detail__btn--hover-normal:hover {
-      background: darken($theme_yellow, 7%);
-    }
-    .c-product-detail__btn--check {
-      background: $theme_green;
-      padding-right: $space_m;
-    }
-    .c-product-detail__btn--warning {
-      background: $theme_red;
-    }
+.c-product-detail__btn--normal {
+  background: $theme_yellow;
+}
+.c-product-detail__btn--hover-normal {
+  background: $theme_yellow;
+}
+.c-product-detail__btn--hover-normal:hover {
+  background: darken($theme_yellow, 7%);
+}
+.c-product-detail__btn--check {
+  background: $theme_green;
+  padding-right: $space_m;
+}
+.c-product-detail__btn--warning {
+  background: $theme_red;
+}
+.c-product-detail__btn--hover-warning {
+  background: $theme_red;
+}
+.c-product-detail__btn--hover-warning:hover {
+  background: darken($theme_red, 7%);;
+}
