--- a/resources/sass/object/component/c-sub-head.scss
+++ b/resources/sass/object/component/c-sub-head.scss
@@ -4,6 +4,10 @@
   height: $space_20l;
   text-align: center;
   line-height: $space_20l;
+  @include mq() {
+    height: 100px;
+    line-height: 100px;
+  }
 }
 
 .c-sub-head__title {
@@ -11,6 +15,9 @@
   position: relative;
   display: inline-block;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  @include mq() {
+    font-size: $font_l;
+  }
 }
 
 .c-sub-head__title:before {
@@ -25,4 +32,7 @@
   transform: translateX(-50%);/*位置調整*/
   background-color: $theme_yellow;/*線の色*/
   border-radius: 2px;/*線の丸み*/
+  @include mq() {
+    bottom: $space_2l;
+  }
 }
