--- a/resources/sass/object/project/p-pagination.scss
+++ b/resources/sass/object/project/p-pagination.scss
@@ -2,6 +2,9 @@
 display: flex;
 justify-content: center;
 margin-bottom: 100px;
+@include mq() {
+  margin-bottom: 50px;
+}
 }
 
 .p-paginationWrap ul.p-pagination {
