--- a/public/css/app.css
+++ b/public/css/app.css
@@ -382,14 +382,14 @@ select:-moz-focusring {
   background: #F8FAFC;
   color: #757575;
   font-size: 18px;
-  padding: 20px 0;
+  padding: 15px 0;
   width: 400px;
 }
 
 @media screen and (max-width: 550px) {
   .c-auth__input {
     font-size: 10px;
-    padding: 18px 0 0 0;
+    padding: 18px 0 5px 10px;
     width: 100%;
   }
 }
