--- a/resources/sass/object/component/c-auth.scss
+++ b/resources/sass/object/component/c-auth.scss
@@ -54,11 +54,11 @@
   background: $theme_gray_background;
   color: $theme_dark_gray;
   font-size: $font_m;
-  padding: $space_2l 0;
+  padding: $space_l 0;
   width: 400px;
   @include mq() {
     font-size: $font_sp-s;
-    padding: 18px 0 0 0;
+    padding: 18px 0 $space_s $space_m;
     width: 100%;
   }
   &:focus {
